<resources>
    <string name="app_name">University Of Piraeus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Αρχική Σελίδα</string>
    <string name="menu_university">Πανεπιστήμιο</string>
    <string name="menu_dioikhsh">Διοίκηση</string>
    <string name="menu_departments">Σχολές</string>
    <string name="menu_research">Έρευνα</string>
    <string name="menu_support">Υπηρεσίες-Παροχές</string>
    <string name="menu_communication">Επικοινωνία</string>
    <string name="epikairotita">ΕΠΙΚΑΙΡΟΤΗΤΑ</string>
    <string name="anakoinwseis">ΑΝΑΚΟΙΝΩΣΕΙΣ</string>
    <string name="ekdhlwseis">ΕΚΔΗΛΩΣΕΙΣ</string>
    <string name="foititikathemata">ΦΟΙΤΗΤΙΚΑ ΘΕΜΑΤΑ</string>
    <string name="unipi">University Of Piraeus</string>
    <string name="login">ΣΥΝΔΕΣΗ</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="address">Διεύθυνση: Μ. Καραολή &amp; Α. Δημητρίου 80, 18534 Πειραιάς</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="history">ΙΣΤΟΡΙΑ</string>
    <string name="navigationsite">ΠΕΡΙΗΓΗΣΗ</string>
    <string name="esoterikoskanonismos">ΕΣΩΤΕΡΙΚΟΣ ΚΑΝΟΝΙΣΜΟΣ ΠΑΠΕΙ</string>
    <string name="kodikasdeontologias">ΚΩΔΙΚΑΣ ΔΕΟΝΤΟΛΟΓΙΑΣ ΚΑΙ ΚΑΛΗΣ ΠΡΑΚΤΙΚΗΣ</string>
    <string name="locationaccess">Τοποθεσίες &amp; Πρόσβαση</string>
    <string name="protectdata">ΠΡΟΣΤΑΣΙΑ ΔΕΔΟΜΕΝΩΝ ΠΡΟΣΩΠΙΚΟΥ ΧΑΡΑΚΤΗΡΑ</string>
    <string name="politikipoiotitas">ΠΟΛΙΤΙΚΗ ΠΟΙΟΤΗΤΑΣ</string>
    <string name="stratigikiuni">ΣΤΡΑΤΙΓΙΚΗ ΠΑΝΕΠΙΣΤΗΜΙΟΥ</string>
    <string name="events">EVENTS</string>
    <string name="historytext">Το Πανεπιστήμιο Πειραιώς ιδρύθηκε ως «Σχολή Βιομηχανικών Σπουδών» το 1938 από το Σύνδεσμο Βιομηχάνων και Βιοτεχνών, σύμφωνα με το Ν.5197/1931 και τον Α.Ν. 28/1936, που σε συνεργασία με το Σύνδεσμο Ανωνύμων Εταιριών της Ελλάδας έβαλαν ως βάσεις την οικονομική, νομική και τεχνική παιδεία των στελεχών της βιομηχανίας.</string>
    <string name="ht1"><li>Το 1945 μετονομάσθηκε σε Ανωτέρα Σχολή Βιομηχανικών Σπουδών και σκοπός της ορίσθηκε η συστηματική, θεωρητική και πρακτική κατάρτιση διοικητικών στελεχών.</li></string>
    <string name="ht2"><li>Το 1949, με το Ν.Δ. 1245/49, ολοκληρώθηκε η οργάνωση της.</li></string>
    <string name="ht3"><li>Τo 1958 Η Ανωτέρα Σχολή Βιομηχανικών Σπουδών μετονομάσθηκε σε Ανωτάτη Βιομηχανική Σχολή και ορίσθηκε έδρα της ο Πειραιάς (ΝΔ 3876/58). Η φοίτηση είναι τετραετής και τα πτυχία που χορηγούνται είναι ισότιμα των άλλων ΑΕΙ.</li></string>
    <string name="ht4"><li>Από το 1966 (ΝΔ 4578/1966) η σχολή λειτούργησε ως ΝΠΔΔ.</li></string>
    <string name="ht5"><li>Από το ακαδημαϊκό έτος 1971-1972 οι σπουδές στη Σχολή διαχωρίστηκαν από το δεύτερο έτος σε σπουδές Οικονομικών Επιστημών και Οργάνωσης και Διοίκησης Επιχειρήσεων (υπ. απόφ. 146652/71)</li></string>
    <string name="ht6"><li>Από το ακαδημαϊκό έτος 1977-1978 λειτούργησε το Στατιστικής και Ασφαλιστικής Επιστήμης.</li></string>
    <string name="ht7"><li>Με το Ν.1268/82 η Σχολή λειτούργησε αρχικά ως μονοτμηματικό ΑΕΙ. Με το ΠΔ 43/1984 όμως η Σχολή οργανώθηκε έτσι ώστε να περιλαμβάνει τρία τμήματα :<b> Οικονομικών Επιστημών, Οργάνωσης και Διοίκησης Επιχειρήσεων και Στατιστικής και Ασφαλιστικής Επιστήμης.</b></li></string>
    <string name="ht8"><li>Τον Ιούνιο του 1989, με το ΠΔ 377/89, η Σχολή μετονομάσθηκε σε Πανεπιστήμιο Πειραιώς, στο οποίο προστέθηκαν τρία ακόμα Τμήματα Σπουδών, δηλαδή:
          <b>- Χρηματοοικονομικής και Τραπεζικής Διοικητικής.</b>
          <b>- Ναυτιλιακών Σπουδών</b>
          <b>- Τεχνολογίας και Συστημάτων Παραγωγής</b></li></string>
    <string name="ht9"><li>Από το ακαδημαϊκό έτος 1990-1991 στα ήδη λειτουργούντα τρία Τμήματα (Οικονομικής Επιστήμης, Οργάνωσης και Διοίκησης Επιχειρήσεων, Στατιστικής και Ασφαλιστικής Επιστήμης), προστέθηκαν σε λειτουργία μόνο τα δύο νέα από τα τρία προβλεπόμενα.
          <b>- Τμήμα Χρηματοοικονομικής και Τραπεζικής Διοικητικής
              - Τμήμα Ναυτιλιακών Σπουδών</b></li></string>
    <string name="ht10"><li>Το <b>Τμήμα Βιομηχανικής Διοίκησης και Τεχνολογίας</b> άρχισε να λειτουργεί από το ακαδημαϊκό έτος 1991-1992 ως <b>Τμήμα Τεχνολογίας και Συστημάτων Παραγωγής</b> και μετονομάσθηκε με το Π.Δ. 113/30-4-2002/ ΦΕΚ 95</li></string>
    <string name="ht11"><li>Το <b>Τμήμα Πληροφορικής</b> άρχισε να λειτουργεί από το ακαδημαϊκό έτος 1992-1993.</li></string>
    <string name="ht12"><li>Το <b>Τμήμα Τεχνολογικής Εκπαίδευσης</b> άρχισε να λειτουργεί από το ακαδημαϊκό έτος 1999-2000, το οποίο σύμφωνα με το άρθρο 3 παρ.2δ.γγ. του Ν.3027/28-6-2002/ΦΕΚ 152, μετονομάσθηκε σε <b>Τμήμα Διδακτικής της Τεχνολογίας και Ψηφιακών Συστημάτων</b>. Κατόπιν, σύμφωνα με το Π.Δ. 151/2009, ΦΕΚ 194/Α/1-11-2009, το Τμήμα μετονομάστηκε σε Τμήμα Ψηφιακών Συστημάτων.</li></string>
    <string name="ht13"><li>Το <b>Τμήμα Διεθνών και Ευρωπαϊκών Σπουδών</b> άρχισε να λειτουργεί από το ακαδημαϊκό έτος 2000-2001.</li></string>
    <string name="ht14"><li>Το <b>Τμήμα Τουριστικών Σπουδών</b> άρχισε να λειτουργεί από το ακαδημαϊκό έτος 2017-2018.</li></string>
    <string name="per1">Στο κεντρικό κτίριο του Πανεπιστημίου στεγάζονται υπηρεσίες, γραφεία καθηγητών, αμφιθέατρα, αίθουσες διδασκαλίας, κτλ. Πιο συγκεκριμένα:</string>
    <string name="per2">Υπόγειο: Βιβλιοθήκη, αναγνωστήριο\n Ισόγειο: Ιατρείο, διατμηματικά εργαστήρια υπολογιστών, κυλικείο \n1ος όρ.: Γραμματείες των Ακαδ. Τμημάτων εκτός των Τμημάτων Πληροφορικής και Ψηφιακών Συστημάτων \n1ος-2ος-3ος όρ.: Αμφιθέατρα και αίθουσες διδασκαλίας \n3ος όρ.: Γραφεία καθηγητών Τμημάτων Χρηματοοικονομικής και Τραπεζικής Διοικητικής, Βιομηχανικής Διοίκησης και Τεχνολογίας \n4ος όρ.: Πρυτανεία, γραφεία διοίκησης, γραφεία καθηγητών Τμήματος Οργάνωσης και Διοίκησης Επιχειρήσεων \n5ος όρ.: Γραφεία καθηγητών Τμημάτων Πληροφορικής, Στατιστικής και Ασφαλιστικής Επιστήμης, Οικονομικής Επιστήμης</string>
    <string name="sup1">Το Τμήμα Φοιτητικής Μέριμνας στεγάζεται στο κεντρικό κτίριο του Πανεπιστημίου Πειραιώς, Καραολή &amp; Δημητρίου 80, 1ος όροφος, γραφείο 114 Α.</string>
    <string name="sup2"><li>Σίτισης</li></string>
    <string name="sup3"><li>Στέγασης</li></string>
    <string name="sup4"><li>Στεγαστικού επιδόματος</li></string>
    <string name="sup5"><li>Υγειονομικής κάλυψης</li></string>
    <string name="sup6"><li>Ευρωπαϊκής κάρτας ασφάλισης</li></string>
    <string name="sup7"><b>Ώρες εξυπηρέτησης κοινού:</b> Δευτέρα, Τετάρτη και Παρασκευή από 11:00 έως 14:00.
        \n<b><u>Επικοινωνία :</u></b>

Στο πλαίσιο της λήψης μέτρων για την καταπολέμηση της διασποράς της λοίμωξης από τον κορωνοϊό Covid-19, <b>η προσέλευση φοιτητών στο Τμήμα Φοιτητικής Μέριμνας, γίνεται αποκλειστικά κατόπιν προηγούμενης συννενόησης.</b>



Τηλέφωνα: 2104142065, 2104142089, 2104142088

E-mail: foitmer@unipi.gr</string>
    <string name="loc1">Κεντρικό Κτίριο, Μ. Καραολή &amp; Α. Δημητρίου 80, 18534, Πειραιάς Τηλ. Κέντρο: 210 4142000, FAX: 210 4142328 e-mail: publ@unipi.gr</string>
    <string name="sg1"><b>ΜΕΛΗ ΣΥΓΚΛΗΤΟΥ ΑΚΑΔΗΜΑΪΚΟ ΕΤΟΣ 2021-2022</b>\n\n<b><u>ΠΡΥΤΑΝΗΣ:</u></b> Άγγελος Κότιος, Καθηγητής του Τμήματος Διεθνών και Ευρωπαϊκών Σπουδών\n\n<b><u>ΑΝΤΙΠΡΥΤΑΝΕΙΣ:</u></b></string>
    <string name="sg2"><li><b>Αντιπρύτανης Έρευνας και Διά Βίου Εκπαίδευσης:</b> Γρηγόριος Χονδροκούκης, Καθηγητής του Τμήματος Βιομηχανικής Διοίκησης και Τεχνολογίας</li></string>
    <string name="sg3"><li><b>Αντιπρύτανης Οικονομικών, Προγραμματισμού και Ανάπτυξης:</b> Μάρκος Κούτρας, Καθηγητής του Τμήματος Στατιστικής και Ασφαλιστικής Επιστήμης</li></string>
    <string name="sg4"><li><b>Αντιπρύτανης Διοικητικών Υποθέσεων, Ακαδημαϊκών Υποθέσεων και Φοιτητικής Μέριμνας:</b> Παντελής Παντελίδης, Καθηγητής του Τμήματος Οικονομικής Επιστήμης</li></string>
    <string name="sg5"><b><u>ΚΟΣΜΗΤΟΡΕΣ ΣΧΟΛΩΝ:</u></b></string>
    <string name="sg6"><li><b>Κοσμήτορας Σχολής Οικονομικών, Επιχειρηματικών και Διεθνών Σπουδών:</b> Μιχάλης Σφακιανάκης, Καθηγητής του Τμήματος Οργάνωσης και Διοίκησης Επιχειρήσεων</li></string>
    <string name="sg7"><li><b>Κοσμήτορας Σχολής Χρηματοοικονομικής και Στατιστικής:</b> Ευστάθιος Χατζηκωνσταντινίδης, Αναπληρωτής Καθηγητής του Τμήματος Στατιστικής και Ασφαλιστικής Επιστήμης</li></string>
    <string name="sg8"><li><b>Κοσμήτορας Σχολής Ναυτιλίας και Βιομηχανίας:</b> Άγγελος Παντουβάκης, Καθηγητής του Τμήματος Ναυτιλιακών Σπουδών</li></string>
    <string name="sg9"><li><b>Κοσμήτορας Σχολής Τεχνολογιών Πληροφορικής και Επικοινωνιών:</b> Δημοσθένης Κυριαζής, Αναπληρωτής Καθηγητής του Τμήματος Ψηφιακών Συστημάτων</li></string>
    <string name="sg10"><b><u>ΠΡΟΕΔΡΟΙ ΑΚΑΔΗΜΑΪΚΩΝ ΤΜΗΜΑΤΩΝ</u></b></string>
    <string name="sg11"><b><u>Σχολή Οικονομικών, Επιχειρηματικών και Διεθνών Σπουδών</u></b></string>
    <string name="sg12"><li><b>Πρόεδρος Τμήματος Οικονομικής Επιστήμης:</b> Σταματίνα Χατζηδήμα, Καθηγήτρια</li></string>
    <string name="sg13"><li><b>Πρόεδρος Τμήματος Οργάνωσης και Διοίκησης Επιχειρήσεων:</b> Δημήτριος Γεωργακέλλος, Καθηγητής</li></string>
    <string name="sg14"><li><b>Πρόεδρος Τμήματος Διεθνών και Ευρωπαϊκών Σπουδών:</b> Αθανάσιος Πλατιάς, Καθηγητής</li></string>
    <string name="sg15"><li><b>Πρόεδρος της Προσωρινής Συνέλευσης του Τμήματος Τουριστικών Σπουδών:</b> Πρύτανης, Καθηγητής Άγγελος Κότιος</li></string>
    <string name="sg16"><b><u>Σχολή Χρηματοοικονομικής και Τραπεζικής Διοικητικής</u></b></string>
    <string name="sg17"><li><b>Αναπληρωτής Πρόεδρος Τμήματος Στατιστικής και Ασφαλιστικής Επιστήμης:</b> Γεώργιος Ηλιόπουλος, Καθηγητής</li></string>
    <string name="sg18"><li><b>Πρόεδρος Τμήματος Χρηματοοικονομικής και Τραπεζικής Διοικητικής:</b> Νικόλαος Κουρογένης, Καθηγητής</li></string>
    <string name="sg19"><b><u>Σχολή Ναυτιλίας και Βιομηχανίας</u></b></string>
    <string name="sg20"><li><b>Αναπληρωτής Πρόεδρος Τμήματος Ναυτιλιακών Σπουδών:</b> Ευστράτιος Παπαδημητρίου, Καθηγητής</li></string>
    <string name="sg21"><li><b>Πρόεδρος Τμήματος Βιομηχανικής Διοίκησης και Τεχνολογίας:</b> Βασίλειος Δεδούσης, Καθηγητής</li></string>
    <string name="sg22"><b><u>Σχολή Τεχνολογιών Πληροφορικής και Επικοινωνιών</u></b></string>
    <string name="sg23"><li><b>Πρόεδρος Τμήματος Πληροφορικής:</b> Μαρία Βίρβου, Καθηγήτρια</li></string>
    <string name="sg24"><li><b>Πρόεδρος Τμήματος Ψηφιακών Συστημάτων:</b> Ηλίας Μαγκλογιάννης, Καθηγητής</li></string>
    <string name="sg25"><b><u>Εκπρόσωπος μελών Ειδικού Εκπαιδευτικού Προσωπικού (Ε.Ε.Π.):  -----</u></b></string>
    <string name="sg26"><b><u>Εκπρόσωπος των μελών Εργαστηριακού Διδακτικού Προσωπικού (Ε.ΔΙ.Π.): κα Χριστίνα Κοντογουλίδου</u></b></string>
    <string name="sg27"><b><u>Εκπρόσωπος των μελών Ειδικού Τεχνικού Εργαστηριακού Προσωπικού (Ε.Τ.Ε.Π.): κα Διαμάντω Ντούβα</u></b></string>
    <string name="sg28"><b><u>Εκπρόσωπος Διοικητικών Υπαλλήλων: κα Βασιλική Γκότση</u></b></string>
    <string name="sg29"><b><u>Εκπρόσωπος προπτυχιακών φοιτητών: -----</u></b></string>
    <string name="sg30"><b><u>Εκπρόσωπος μεταπτυχιακών φοιτητών/υποψηφίων διδακτόρων: -----</u></b></string>
</resources>